<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffb067"
    tools:context=".Fragments.HomeFragment">

    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_width="2dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                app:civ_border_color="#FFF"/>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btnRation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rationCard"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_bg"
                android:textSize="30sp" />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/btnVoter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voterCard"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:background="@drawable/button_bg" />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/btnAwas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aawaasList"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:background="@drawable/button_bg" />

            <Button
                android:id="@+id/btnLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changeLang"
                android:textColor="#FFFFFF"
                android:layout_margin="25dp"
                android:background="@drawable/button_bg" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>