<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffb067"
    tools:context=".Fragments.AwasFragment">

    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBeneficiary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beneficiaryList"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_bg"
                android:textSize="20sp" />

            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/btnAwas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/awasList"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_bg"
                android:textSize="20sp" />

            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchBeneficiary"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_bg"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        android:backgroundTint="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>